--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -58,8 +58,7 @@
                     @if (matchup.score) {
                       <button
                         class="menu-item"
-                        routerLink="matchup"
-                        [queryParams]="{ id: matchup._id }"
+                        [routerLink]="['matchup', matchup._id]"
                       >
                         <mat-icon> search_insights </mat-icon> View Matchup
                       </button>
