--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -163,7 +163,7 @@
                           >
                             <div class="entry-sprite">
                               <pdz-sprite
-                                [pid]="pokemon.id"
+                                [pokemon]="pokemon"
                                 [tooltipPosition]="null"
                               ></pdz-sprite>
                             </div>
