--- a/src/app/drafts/matchup-overview/matchup-teambuilder/matchup-teambuilder.component.html
+++ b/src/app/drafts/matchup-overview/matchup-teambuilder/matchup-teambuilder.component.html
@@ -4,7 +4,21 @@
       <pdz-teambuilder-widget
         [matchupData]="matchupData"
         [matchupId]="matchupId"
+        [team]="team"
       />
+    </div>
+    <div class="widget-wrapper">
+      <pdz-typechart
+        [shownTeam]="0"
+        [typecharts]="getTypechart()"
+        (togglePokemon)="onToggle($event)"
+      >
+      </pdz-typechart>
+    </div>
+
+    <div class="widget-wrapper">
+      <pdz-coveragechart [typechart]="matchupData.typechart[1]" [team]="team">
+      </pdz-coveragechart>
     </div>
   </div>
 } @else {
