--- a/src/app/drafts/matchup-overview/widgets/coveragechart/coveragechart.component.scss
+++ b/src/app/drafts/matchup-overview/widgets/coveragechart/coveragechart.component.scss
@@ -1,9 +1,13 @@
-@use "../../../../styles/mixins/scales" as *;
+@use "../../../../../styles/mixins/scales" as *;
 
 :host {
   @include generate-bg-scale();
   --bevel-radius: var(--pdz-shape-corner-sm, 0.5rem);
   --bevel-padding: var(--pdz-space-2xs, 3px);
+}
+.widget-container {
+  --pdz-cmp-typechart-stat-hover: var(--pdz-color-primary-container);
+  --pdz-cmp-typechart-border-hover: var(--pdz-color-primary-border);
 }
 
 .type-cell {
@@ -23,82 +27,19 @@
   font-size: 0.75rem;
   font-weight: bold;
   overflow: hidden;
-  &.type-colored {
-    color: var(--pdz-color-on-primary-fixed, white);
-    box-shadow: var(--pdz-level-1);
-  }
-  &.type-empty {
-    color: transparent;
-    background-color: var(--pdz-color-surface-variant);
+
+  img {
+    max-width: 1rem;
+    max-height: 1rem;
   }
 }
 
 td,
 th {
-  transition: opacity 0.1s ease-in-out;
   text-align: center;
   color: var(--pdz-color-on-primary-fixed, white);
   &:first-child {
     padding-left: var(--pdz-space-xs);
-  }
-
-  &.column-hovered {
-    .type-wrapper {
-      background-color: var(
-        --pdz-cmp-typechart-stat-hover,
-        var(--pdz-color-menu-container)
-      );
-    }
-  }
-}
-
-.type-container,
-.type-container-small {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 2.5rem;
-  border-radius: var(--pdz-shape-corner-xs);
-  box-shadow: var(--pdz-level-1);
-  margin-top: 0px;
-  margin-bottom: 1px;
-
-  &.sort-press {
-    margin-bottom: 0;
-    margin-top: 1px;
-    box-shadow: var(--pdz-level-0);
-  }
-
-  &.type-container {
-    height: 2.5rem;
-    padding: 0 var(--bevel-padding) var(--bevel-padding);
-  }
-
-  &.type-container-small {
-    height: var(--pdz-space-lg);
-    padding: var(--bevel-padding);
-  }
-
-  .type-text {
-    flex-shrink: 0;
-    font-size: 0.6rem;
-    line-height: 0.7rem;
-  }
-
-  .type-icon-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-    width: var(--pdz-space-lg);
-    overflow: hidden;
-
-    img {
-      height: var(--pdz-space-lg);
-      width: var(--pdz-space-lg);
-      object-fit: contain;
-    }
   }
 }
 
@@ -109,23 +50,11 @@ th {
     --pdz-cmp-typechart-border-hover,
     var(--pdz-color-menu-border)
   );
-
   .pdz-scale-neutral {
     background-color: var(
       --pdz-cmp-typechart-stat-hover,
       var(--pdz-color-menu-container)
     );
-  }
-}
-
-.disabled {
-  .column-hovered {
-    .pdz-scale-neutral {
-      background-color: var(
-        --pdz-cmp-typechart-stat-hover,
-        var(--pdz-color-menu-container)
-      );
-    }
   }
 }
 
@@ -153,27 +82,12 @@ tbody {
           var(--pdz-color-menu-container)
         );
       }
-
-      &.disabled {
-        .type-wrapper {
-          background-color: var(
-            --pdz-cmp-typechart-stat-hover,
-            var(--pdz-color-menu-container)
-          );
-        }
-      }
     }
 
     &:last-child:not(:hover) {
       td {
         border-bottom-left-radius: var(--bevel-radius);
         border-bottom-right-radius: var(--bevel-radius);
-      }
-    }
-
-    &:not(:hover).disabled {
-      td:not(.column-hovered) {
-        opacity: 0.5;
       }
     }
   }
@@ -246,4 +160,14 @@ tbody {
   height: 2rem;
   padding: var(--pdz-space-xs);
   overflow: hidden;
+}
+
+.stat-label {
+  &.weaks {
+    background-color: var(--pdz-color-scale-positive-4);
+  }
+
+  &.resists {
+    background-color: var(--pdz-color-scale-negative-4);
+  }
 }
