--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -96,6 +96,7 @@
   padding: var(--pdz-space-lg);
   flex-grow: 1;
   height: 100%;
+  width: 100%;
   flex-shrink: 0;
 
   @media (min-width: 768px) {
@@ -116,7 +117,6 @@
     height: 100%;
     width: 100%;
   }
-
   .box-title {
     width: 100%;
     text-align: center;
@@ -136,7 +136,6 @@
     flex-direction: column;
     width: 10rem;
   }
-
   .sprite-wrapper {
     height: 3rem;
     width: 3rem;
@@ -165,11 +164,9 @@
   height: 100%;
   width: 100%;
   row-gap: 0.25rem;
-
   @media (min-width: 768px) {
     flex-direction: column;
   }
-
   .setting {
     .setting-name {
       font-weight: 600;
