--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,17 +5,60 @@ $typography: (
     font-weight: var(--pdz-font-weight-bold),
     line-height: 2.5rem,
   ),
+  headline-medium: (
+    font-family: var(--pdz-font-fancy),
+    font-size: 1.75rem,
+    font-weight: var(--pdz-font-weight-bold),
+    line-height: 2rem,
+  ),
+  headline-small: (
+    font-family: var(--pdz-font-fancy),
+    font-size: 1.2rem,
+    font-weight: var(--pdz-font-weight-bold),
+    line-height: 1.5rem,
+  ),
+
+  body-large: (
+    font-family: var(--pdz-font-regular),
+    font-size: 1.2rem,
+    font-weight: 400,
+    line-height: 1.6rem,
+  ),
   body-medium: (
     font-family: var(--pdz-font-regular),
     font-size: 1rem,
     font-weight: 400,
-    line-height: 1.5rem,
+    line-height: 1.2rem,
+  ),
+  body-small: (
+    font-family: var(--pdz-font-regular),
+    font-size: 0.9rem,
+    font-weight: 400,
+    line-height: 1.1rem,
   ),
   label-small: (
     font-family: var(--pdz-font-regular),
     font-size: 0.75rem,
     font-weight: 500,
     line-height: 1rem,
+    text-transform: uppercase,
+    opacity: 0.7,
+  ),
+  label-medium: (
+    font-family: var(--pdz-font-regular),
+    font-size: 0.9rem,
+    font-weight: 500,
+    line-height: 1.2rem,
+    text-transform: uppercase,
+    opacity: 0.7,
+  ),
+  label-large: (
+    font-family: var(--pdz-font-regular),
+    font-size: 1rem,
+    font-weight: 500,
+    line-height: 1.25rem,
+    text-transform: uppercase,
+    opacity: 0.7,
   ),
 );
 
